<resources>
    <string name="app_name">CoChain</string>
    <string name="title_profile">Profile</string>
    <string name="title_query">Query</string>
    <string name="title_faq">FAQ</string>

    <string name="start_heading">Help to control SARS-CoV-2</string>
    <string name="start_subtext">Protect yourself and your fellow men.\nAbsolutely anonymous.\nKeep App running in order to ensure full service.</string>
    <string name="start_switch_fit">Fit</string>
    <string name="start_button_how">How does it work?</string>

    <string name="contactViewTextDate">Date:\n{}</string>
    <string name="contactViewTextDuration">Duration:\n{}</string>
    <string name="contactViewTextDistance">Distance:\n{}</string>
    <string name="contactViewAvatarDescription">avatar</string>
    <string name="query_heading">Collect</string>
    <string name="query_subtext">Your query of risks</string>
    <string name="query_status">Status:\n{}</string>
    <string name="query_avatar">Avatar</string>

</resources>
