<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cochain.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_query"
        android:name="com.example.cochain.ui.query.QueryFragment"
        android:label="@string/title_query"
        tools:layout="@layout/fragment_query" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.cochain.ui.faq.FaqFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.cochain.ui.start.StartFragment"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start" />
</navigation>
